--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "babel-plugin-mock-imports",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Babel Plugin to mock import statements",
   "main": "lib/index.js",
   "repository": "teod/babel-plugin-mock-imports",
   "author": "Teo Druta <teodruta@gmail.com.com>",
   "scripts": {
     "compile": "rimraf lib/*; babel src/ -d lib/ -s",
-    "prepublish": "npm run compile"
+    "prepublish": "npm run compile",
+    "test": "ava test/index.spec.js"
   },
   "devDependencies": {
-    "ava": "0.18",
-    "babel-cli": "6.22.2",
-    "babel-core": "6.22.1",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-stage-1": "6.22.0",
-    "rimraf": "2.5.4"
+    "ava": "0.22.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
+    "rimraf": "2.6.2"
   }
 }
