--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "test": "ava test/index.spec.js"
   },
   "devDependencies": {
-    "ava": "0.22.0",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-1": "6.24.1",
+    "@babel/core": "7.1.0",
+    "@babel/preset-env": "7.1.0",
+    "ava": "0.25.0",
     "rimraf": "2.6.2"
   }
 }
